Bug 1867474 - Don't collect bookmark tags for ExcludeItems() Places queries. r=daisuke,places-reviewers

Fetching tags for excludeItems queries doesn't make much sense as they only show
folders and queries, and in certain cases it may slow down bookmarks panels
considerably.

Differential Revision: https://phabricator.services.mozilla.com/D195115